--- a/Practica4-LuceroJustin-TacuriJhonatan/src/main/resources/mensajes/mensaje_en_US.properties
+++ b/Practica4-LuceroJustin-TacuriJhonatan/src/main/resources/mensajes/mensaje_en_US.properties
@@ -75,3 +75,26 @@ joption.noestallenocodigo=The code field is not filled
 joption.noseencontroeldisco=Disk not found
 joption.seacreado=It has been created successfully
 joption.elid=ID already exists
+joption.eliminardisco=Are you sure you want to delete the disk?
+joption.noseelimino=It has not been deleted correctly
+joption.lacancionnoexiste=The song does not exist
+joption.lacancionyaexsite=The Song Code already exists
+joption.seagrego=\nAdded song successfully
+joption.eliminarcancion=Are you sure you want to delete the song?
+joption.seeliminolacancion=\nThe song has been successfully removed\n
+joption.noseeliminolacancion=The song has not been removed
+joption.seactualizoelcantante=The singer has been successfully updated\n
+joption.nollenoelnombre=The name field is empty\n
+joption.elnombrenoexiste=The name of the song does not exist in any singer
+joption.secreocantante=The singer has been successfully created
+joption.eliminarcantante=Are you sure you want to delete the singer?
+joption.cantnteeliminado=The singer has been successfully eliminated
+joption.noseeliminocantante=Not removed successfully
+joption.actualizocompositro=Composer has been successfully updated
+joption.camposnollenos=The ID fields are not filled
+joption.seagregolciente=Successfully added singer as a songwriter client
+joption.notitulo=The title field is not filled
+joption.noexistetitulo=There is no title
+joption.secreocompositor=Composer has been successfully created
+joption.preguntaeliminarcompo=Are you sure you want to remove the composer?
+joption.seeliminoelcompo=Composer has been successfully removed
