--- a/Practica4-LuceroJustin-TacuriJhonatan/src/main/resources/mensajes/mensaje_es_EC.properties
+++ b/Practica4-LuceroJustin-TacuriJhonatan/src/main/resources/mensajes/mensaje_es_EC.properties
@@ -75,3 +75,26 @@ joption.noestallenocodigo=No est\u00e1 lleno el campo del c\u00f3digo
 joption.noseencontroeldisco=No se encontr\u00f3 el disco
 joption.seacreado=Se a creado exitosamente
 joption.elid=El ID ya existe
+joption.eliminardisco=Est\u00e1 seguro que desea eliminar el disco
+joption.noseelimino=No se a eliminado correctamente
+joption.lacancionnoexiste=La canci\u00f3n no existe
+joption.lacancionyaexsite=El C\u00f3digo de la Canci\u00f3n ya existe
+joption.seagrego=Se agreg\u00f3 exitosamente la canci\u00f3n
+joption.eliminarcancion=\u00bfEst\u00e1s seguro que deseas eliminar la cancion?
+joption.seeliminolacancion=La canci\u00f3n a sido eliminada con exito
+joption.noseeliminolacancion=La canci\u00f3n no a sido eliminada
+joption.seactualizoelcantante=Se a actualizado exitosamente el cantante
+joption.nollenoelnombre=El campo del nombre est\u00e1 vacio
+joption.elnombrenoexiste=El nombre de la canci\u00f3n no existe en ningun cantante
+joption.secreocantante=Se a creado exitosamente el cantante
+joption.eliminarcantante=\u00bfEst\u00e1s seguro que deseas eliminar el cantante?
+joption.cantnteeliminado=El cantante ha sido eliminado con \u00e9xito
+joption.noseeliminocantante=No se eliminado con \u00e9xito
+joption.actualizocompositro=Se a actualizado exitosamente el compositor
+joption.camposnollenos=Los campos de los ID no est\u00e1n llenos
+joption.seagregolciente=Se agreg\u00f3 exitosamente el cantante como cliente de compositor
+joption.notitulo=No est\u00e1 lleno el campo del t\u00edtulo
+joption.noexistetitulo=No existe el t\u00edtulo 
+joption.secreocompositor=Se a creado exitosamente el compositor
+joption.preguntaeliminarcompo=\u00bfEst\u00e1s seguro que deseas eliminar el compositor?
+joption.seeliminoelcompo=El compositor a sido eliminado con \u00e9xito
