--- a/Practica4-LuceroJustin-TacuriJhonatan/src/main/resources/mensajes/mensaje_fr_FR.properties
+++ b/Practica4-LuceroJustin-TacuriJhonatan/src/main/resources/mensajes/mensaje_fr_FR.properties
@@ -75,3 +75,27 @@ joption.noestallenocodigo=Le champ code n'est pas rempli
 joption.noseencontroeldisco=Disque introuvable
 joption.seacreado=Il a \u00e9t\u00e9 cr\u00e9\u00e9 avec succ\u00e8s
 joption.elid=L'identifiant existe d\u00e9j\u00e0
+joption.eliminardisco=Voulez-vous vraiment supprimer le disque ?
+joption.noseelimino=Il n'a pas \u00e9t\u00e9 supprim\u00e9 correctement
+joption.lacancionnoexiste=La chanson n'existe pas
+joption.lacancionyaexsite=Le code de chanson existe d\u00e9j\u00e0
+joption.seagrego=La chanson a \u00e9t\u00e9 ajout\u00e9e avec succ\u00e8s
+joption.eliminarcancion=Voulez-vous vraiment supprimer la chanson ?\n
+joption.seeliminolacancion=La chanson a \u00e9t\u00e9 supprim\u00e9e avec succ\u00e8s
+joption.noseeliminolacancion=La chanson n'a pas \u00e9t\u00e9 supprim\u00e9e
+joption.seactualizoelcantante=Le chanteur a \u00e9t\u00e9 mis \u00e0 jour avec succ\u00e8s
+joption.nollenoelnombre=Le champ du nom est vide
+joption.elnombrenoexiste=Le nom de la chanson n'existe chez aucun chanteur
+joption.secreocantante=Le chanteur a \u00e9t\u00e9 cr\u00e9\u00e9 avec succ\u00e8s\n
+joption.eliminarcantante=Voulez-vous vraiment supprimer le chanteur ?
+joption.cantnteeliminado=Le chanteur a \u00e9t\u00e9 supprim\u00e9 avec succ\u00e8s
+joption.noseeliminocantante=Pas supprim\u00e9 avec succ\u00e8s
+
+joption.actualizocompositro=Composer a \u00e9t\u00e9 mis \u00e0 jour avec succ\u00e8s
+joption.camposnollenos=Les champs ID ne sont pas remplis
+joption.seagregolciente=Chanteur ajout\u00e9 avec succ\u00e8s en tant que client auteur-compositeur
+joption.notitulo=Le champ titre n'est pas rempli
+joption.noexistetitulo=Il n'y a pas de titre
+joption.secreocompositor=Composer a \u00e9t\u00e9 cr\u00e9\u00e9 avec succ\u00e8s
+joption.preguntaeliminarcompo=Voulez-vous vraiment supprimer le compositeur ?
+joption.seeliminoelcompo=Le compositeur a \u00e9t\u00e9 supprim\u00e9 avec succ\u00e8s
