--- a/Practica4-LuceroJustin-TacuriJhonatan/src/main/resources/mensajes/mensaje_en_US.properties
+++ b/Practica4-LuceroJustin-TacuriJhonatan/src/main/resources/mensajes/mensaje_en_US.properties
@@ -98,3 +98,5 @@ joption.noexistetitulo=There is no title
 joption.secreocompositor=Composer has been successfully created
 joption.preguntaeliminarcompo=Are you sure you want to remove the composer?
 joption.seeliminoelcompo=Composer has been successfully removed
+jblbuuscar.cantante=Search Singer:
+jbl.nombrediscooooo=Enter the name of the Disk
