--- a/Practica4-LuceroJustin-TacuriJhonatan/src/main/resources/mensajes/mensaje_es_EC.properties
+++ b/Practica4-LuceroJustin-TacuriJhonatan/src/main/resources/mensajes/mensaje_es_EC.properties
@@ -98,3 +98,5 @@ joption.noexistetitulo=No existe el t\u00edtulo
 joption.secreocompositor=Se a creado exitosamente el compositor
 joption.preguntaeliminarcompo=\u00bfEst\u00e1s seguro que deseas eliminar el compositor?
 joption.seeliminoelcompo=El compositor a sido eliminado con \u00e9xito
+jblbuuscar.cantante=Buscar Cantante:
+jbl.nombrediscooooo=Ingrese el nombre del Disco
