--- a/Practica4-LuceroJustin-TacuriJhonatan/src/main/resources/mensajes/mensaje_fr_FR.properties
+++ b/Practica4-LuceroJustin-TacuriJhonatan/src/main/resources/mensajes/mensaje_fr_FR.properties
@@ -99,3 +99,5 @@ joption.noexistetitulo=Il n'y a pas de titre
 joption.secreocompositor=Composer a \u00e9t\u00e9 cr\u00e9\u00e9 avec succ\u00e8s
 joption.preguntaeliminarcompo=Voulez-vous vraiment supprimer le compositeur ?
 joption.seeliminoelcompo=Le compositeur a \u00e9t\u00e9 supprim\u00e9 avec succ\u00e8s
+jblbuuscar.cantante=Rechercher un chanteur :
+jbl.nombrediscooooo=Entrez le nom du disque
